Working on the fade in and out of content. At the moment the content files are loaded and faded out initially, then they fade in when required. This way content is loaded and ready to be faded in.

--- a/public/lib/about.html
+++ b/public/lib/about.html
@@ -1,4 +1,6 @@
-<h1>About</h1>
+<div id="aboutText" class="boxContent">
+
+  <h1>About</h1>
 
 <p>I'm a recent graduate of Europe's leading Web Development bootcamp. In a previous life I was a commercial analyst for the second largest pharmaceutical company in the world and a company that is consistently in the top 50 of the world best brands. Before that I was a Second Lieutenant with the Royal Marine Commandos and before that a qualified architectural technologist.</p>
 
@@ -66,3 +68,5 @@ Competed internationally for Ireland in Muay Thai Boxing during this period.</p>
 <h2>Interests</h2>
 
 <p>Brazilian Jiu-Jitsu, Muay Thai Boxing, Running and Potato related activities (I'm Irish).</p>
+
+</div>
